{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 385,
  "lineage": "e66b9293-5332-4d6f-5f98-1958ba2abf5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "Brazil-TGW01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:sa-east-1:866340886126:transit-gateway/tgw-083b5e2861f5a08f7",
            "association_default_route_table_id": "tgw-rtb-0255126298bfec64e",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Brazil-TGW01",
            "dns_support": "enable",
            "id": "tgw-083b5e2861f5a08f7",
            "owner_id": "866340886126",
            "propagation_default_route_table_id": "tgw-rtb-0255126298bfec64e",
            "tags": {
              "Location": "Sao Paulo",
              "Name": "Brazil-TGW01",
              "Owner": "TIQS",
              "Service": "TGW"
            },
            "tags_all": {
              "Location": "Sao Paulo",
              "Name": "Brazil-TGW01",
              "Owner": "TIQS",
              "Service": "TGW"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-A-SaoPaulo-Prod-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0580c78c645e838aa",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0327a6ee6e0c5227a"
            ],
            "tags": {
              "Name": "VPC-A-SaoPaulo-Prod-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-A-SaoPaulo-Prod-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-083b5e2861f5a08f7",
            "vpc_id": "vpc-012bfc1d56f5c5780",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Brazil-TGW01",
            "aws_subnet.vpc-A-public-sa-east-1a",
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-B-SaoPaulo-Dev-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06cfc5e87041803ea",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-08d9b9118202febd3"
            ],
            "tags": {
              "Name": "VPC-B-SaoPaulo-Dev-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-B-SaoPaulo-Dev-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-083b5e2861f5a08f7",
            "vpc_id": "vpc-08a76382c9a29b4ac",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Brazil-TGW01",
            "aws_subnet.vpc-B-private-sa-east-1b",
            "aws_vpc.VPC-B-SaoPaulo-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-C-SaoPaulo-Test-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08550b54acd7778f2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ef51419442d1348c"
            ],
            "tags": {
              "Name": "VPC-C-SaoPaulo-Test-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-C-SaoPaulo-Test-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-083b5e2861f5a08f7",
            "vpc_id": "vpc-0452f42905fc8d400",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.Brazil-TGW01",
            "aws_subnet.vpc-C-private-sa-east-1c",
            "aws_vpc.VPC-C-SaoPaulo-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC-A-SaoPaulo-Prod-Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3d216834405c1db",
            "arn": "arn:aws:ec2:sa-east-1:866340886126:instance/i-0ab677ad8c07edd96",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab677ad8c07edd96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0960af046539c095c",
            "private_dns": "ip-10-230-1-100.sa-east-1.compute.internal",
            "private_ip": "10.230.1.100",
            "public_ip": "54.233.103.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2bacc327e547a48",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0327a6ee6e0c5227a",
            "tags": {
              "Name": "VPC-A-SaoPaulo-Prod-Windows",
              "service": "windows"
            },
            "tags_all": {
              "Name": "VPC-A-SaoPaulo-Prod-Windows",
              "service": "windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051eba2486b2368ae"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC-A-SaoPaulo-Prod-With-Bastion-01",
            "aws_subnet.vpc-A-public-sa-east-1a",
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC-B-SaoPaulo-Dev-basiclinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989c1b438266c944",
            "arn": "arn:aws:ec2:sa-east-1:866340886126:instance/i-0f0f7f0f661563d9e",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0f7f0f661563d9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020f185972af52f7c",
            "private_dns": "ip-10-230-1-34.sa-east-1.compute.internal",
            "private_ip": "10.230.1.34",
            "public_ip": "54.207.179.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0454a448e039528c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0327a6ee6e0c5227a",
            "tags": {
              "Name": "VPC-B-SaoPaulo-Dev-basiclinux",
              "service": "basiclinux"
            },
            "tags_all": {
              "Name": "VPC-B-SaoPaulo-Dev-basiclinux",
              "service": "basiclinux"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051eba2486b2368ae"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC-A-SaoPaulo-Prod-With-Bastion-01",
            "aws_subnet.vpc-A-public-sa-east-1a",
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Homework-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:internet-gateway/igw-0af58ae29297986f1",
            "id": "igw-0af58ae29297986f1",
            "owner_id": "866340886126",
            "tags": {
              "Name": "Homework-IGW",
              "Service": "IGW"
            },
            "tags_all": {
              "Name": "Homework-IGW",
              "Service": "IGW"
            },
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "dependencies": [
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-A-SaoPaulo-Prod-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:route-table/rtb-0e7a0072615cbc831",
            "id": "rtb-0e7a0072615cbc831",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-A-SaoPaulo-Prod-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-A-SaoPaulo-Prod-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-A-SaoPaulo-Prod-PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:route-table/rtb-0843e5f34964353e4",
            "id": "rtb-0843e5f34964353e4",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-083b5e2861f5a08f7",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A-SaoPaulo-Prod-PublicRT"
            },
            "tags_all": {
              "Name": "VPC-A-SaoPaulo-Prod-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.Brazil-TGW01",
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-B-SaoPaulo-Dev-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:route-table/rtb-0147dfdcbd5c653ec",
            "id": "rtb-0147dfdcbd5c653ec",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-083b5e2861f5a08f7",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-B-SaoPaulo-Dev-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-B-SaoPaulo-Dev-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a76382c9a29b4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.Brazil-TGW01",
            "aws_vpc.VPC-B-SaoPaulo-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-C-SaoPaulo-Test-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:route-table/rtb-01349f10cfc321887",
            "id": "rtb-01349f10cfc321887",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-C-SaoPaulo-Test-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-C-SaoPaulo-Test-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0452f42905fc8d400"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-C-SaoPaulo-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC-A-SaoPaulo-Prod-With-Bastion-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:security-group/sg-051eba2486b2368ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051eba2486b2368ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "terraform-20241026052847953000000001",
            "name_prefix": "terraform-",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-A-SaoPaulo-Prod-With-Bastion-01",
              "service": "basicwindows"
            },
            "tags_all": {
              "Name": "VPC-A-SaoPaulo-Prod-With-Bastion-01",
              "service": "basicwindows"
            },
            "timeouts": null,
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC-B-SaoPaulo-Dev-SG02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:security-group/sg-06a53f5b89f35e79a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a53f5b89f35e79a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241026052847966700000002",
            "name_prefix": "terraform-",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-B-SaoPaulo-Dev",
              "service": "basiclinux"
            },
            "tags_all": {
              "Name": "VPC-B-SaoPaulo-Dev",
              "service": "basiclinux"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a76382c9a29b4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-B-SaoPaulo-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-A-private-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:subnet/subnet-0b3fc4a9e8512e01e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3fc4a9e8512e01e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "dependencies": [
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-A-public-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:subnet/subnet-0327a6ee6e0c5227a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327a6ee6e0c5227a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-012bfc1d56f5c5780"
          },
          "dependencies": [
            "aws_vpc.VPC-A-SaoPaulo-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-B-private-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:subnet/subnet-08d9b9118202febd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.231.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d9b9118202febd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08a76382c9a29b4ac"
          },
          "dependencies": [
            "aws_vpc.VPC-B-SaoPaulo-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-C-private-sa-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:subnet/subnet-0ef51419442d1348c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.232.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef51419442d1348c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0452f42905fc8d400"
          },
          "dependencies": [
            "aws_vpc.VPC-C-SaoPaulo-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-A-SaoPaulo-Prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:vpc/vpc-012bfc1d56f5c5780",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-0de6bf2735e05a8a4",
            "default_route_table_id": "rtb-04da7d6e56b9baf7c",
            "default_security_group_id": "sg-0c426e35f39807da5",
            "dhcp_options_id": "dopt-0f16cd32922cc580b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-012bfc1d56f5c5780",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04da7d6e56b9baf7c",
            "owner_id": "866340886126",
            "tags": {
              "Location": "Sao Paulo",
              "Name": "VPC-A-SaoPaulo-Prod",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "Sao Paulo",
              "Name": "VPC-A-SaoPaulo-Prod",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-B-SaoPaulo-Dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:vpc/vpc-08a76382c9a29b4ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.231.0.0/16",
            "default_network_acl_id": "acl-00d93fc7be8f03d56",
            "default_route_table_id": "rtb-0d664a97c0ef585ed",
            "default_security_group_id": "sg-04ba3c0c91f52537a",
            "dhcp_options_id": "dopt-0f16cd32922cc580b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a76382c9a29b4ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d664a97c0ef585ed",
            "owner_id": "866340886126",
            "tags": {
              "Location": "Sao Paulo",
              "Name": "VPC-B-SaoPaulo-Dev",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "Sao Paulo",
              "Name": "VPC-B-SaoPaulo-Dev",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-C-SaoPaulo-Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:866340886126:vpc/vpc-0452f42905fc8d400",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.232.0.0/16",
            "default_network_acl_id": "acl-0ae1295b43df09c50",
            "default_route_table_id": "rtb-0f31eb2f1c66921db",
            "default_security_group_id": "sg-0cac4c489924c5749",
            "dhcp_options_id": "dopt-0f16cd32922cc580b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0452f42905fc8d400",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f31eb2f1c66921db",
            "owner_id": "866340886126",
            "tags": {
              "Location": "Sao Paulo",
              "Name": "VPC-C-SaoPaulo-Test",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "Sao Paulo",
              "Name": "VPC-C-SaoPaulo-Test",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    }
  ]
}